hphp/test/slow/ext_string/chunk_split_overflow.php.expectf

Fatal error: String length exceeded 2^31-2: 4000004000000 in %s on line 3
